# inter_process_communication

./: .gitignore  README.md  index.html  run.sh  run_tests.sh  script.js  style.css
back-end/: CMakeLists.txt  main.cpp  main.h
back-end/anonymous-pipes/: anonymous_pipes.cpp  anonymous_pipes.h
back-end/local-sockets/: local_sockets.cpp  local_sockets.h
back-end/shared-memory/: shared_memory.cpp  shared_memory.h
front-end/: index.html  script.js  style.css
integration/: request.h  response.h
server/: package-lock.json  package.json  server.js
tests/: test_anonymous_pipes.cpp  test_backend_main.cpp  test_local_sockets.cpp  test_shared_memory.cpp
